name:                revnes
version:             0.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Daniel Wagner
maintainer:          me@dmwit.com
-- copyright:           
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     RevNES.Fold,
                       RevNES.MemMap,
                       RevNES.MemMap.INES,
                       RevNES.Parse,
                       RevNES.PrettyPrint.Pseudo,
                       RevNES.Types
  -- other-modules:       
  -- other-extensions:    
  build-depends:       array >=0.5 && <0.6,
                       attoparsec >=0.13 && <0.14,
                       base >=4.10 && <4.11,
                       bytestring >=0.10 && <0.11,
                       containers >=0.5 && <0.6,
                       cryptonite >=0.24 && <0.25,
                       data-default >=0.7 && <0.8,
                       filepath >=1.4 && <1.5,
                       IntervalMap >=0.6 && <0.7,
                       mtl >=2.2 && <2.3,
                       zip-archive >=0.3 && <0.4
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -fno-warn-tabs

executable revnes
  main-is:             revnes.hs
  other-modules:       RevNES.UI
  build-depends:       base >=4.10 && <4.11,
                       brick >=0.36 && <0.38,
                       containers >=0.5 && <0.6,
                       cryptonite >=0.24 && <0.25,
                       data-default >=0.7 && <0.8,
                       mtl >=2.2 && <2.3,
                       revnes,
                       text-zipper >=0.10 && <0.11,
                       vector >=0.12 && <0.13,
                       vty >=5.19 && <5.20
  hs-source-dirs:      bin
  default-language:    Haskell2010
  ghc-options:         -threaded -fno-warn-tabs
